@@ -49,6 +49,8 @@ Core and Builtins
 Library
 -------
 
+- Add the "display" and "undisplay" pdb commands.
+
 - Issue #7245: Add a SIGINT handler in pdb that allows to break a program
   again after a "continue" command.
 
